# pygletPlatformerExample

./: .gitignore  README.md  main.py  pyproject.toml  settings.py
content/leveldata/: 0.json
game/: __init__.py  button.py  common_type.py  game_main.py  game_manager.py  game_start.py  group.py  key_map.py  level_editor.py  menu.py  sprite.py  tools.py  ui_group.py
