[project]
name = ""
version = ""
description = ""
authors = [
    {name = "ChrisChou-freeman", email = "zhou.guanwei@foxmail.com"},
]
dependencies = [
    "pyglet~=1.5",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.scripts]
start = "python3 main.py"
