[project]
name = ""
version = ""
description = ""
authors = [
    {name = "ChrisChou-freeman", email = "zhou.guanwei@foxmail.com"},
]
dependencies = [
    "pyglet~=1.5",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""


[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.scripts]
start = "python3 main.py"
build_ext = "pyinstaller --add-data 'content:content' --onefile --windowed main.py"

[tool.pdm.dev-dependencies]
dev = [
    "pyinstaller~=4.5"]
